# TOP-24

LAB_01-BASICS/exercises/bugs/: main.c
LAB_01-BASICS/exercises/vector/src/: main.c
LAB_01-BASICS/src/bugs/: Makefile  bugs
LAB_01-BASICS/src/saxpy/: main.c  makefile  saxpy
LAB_01-BASICS/src/vector/: CMakeLists.txt  makefile  makefile.txt  vector1  vector_f1.txt  vector_f2.txt  vector_f3.txt  vector_fast.txt
LAB_04-MPI_OPTIMIZATION/: ping-pong.c  plot-scalibailty-2.gp  plot-scalibailty.gp  script-scalability.sh  script-vect.sh  vect  vect-sum-2.c
LAB_04-MPI_OPTIMIZATION 2/: ping-pong-actual.c  ping_pong  ping_pong_actualc  ping_pong_sync  plot-script.gp  script.sh  vect-2  vect-sum.c
